--- a/src/Mimp.SeeSharper.Instantiation/Mimp.SeeSharper.Instantiation.csproj
+++ b/src/Mimp.SeeSharper.Instantiation/Mimp.SeeSharper.Instantiation.csproj
@@ -3,6 +3,22 @@
   <PropertyGroup>
     <TargetFrameworks>net5.0;netcoreapp3.1;netcoreapp2.1;netstandard2.1;net48;net461</TargetFrameworks>
     <LangVersion>latest</LangVersion>
+    <AssemblyName>Mimp.SeeSharper.Instantiation</AssemblyName>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <AssemblyTitle>SeeSharper Instantiation</AssemblyTitle>
+    <Description>SeeSharper Instantiation is a construct to instantiate objects.</Description>
+    <Authors>SeeSharper Contributors</Authors>
+    <Company>Mimp</Company>
+    <Product>SeeSharper Instantiation</Product>
+    <Copyright>Copyright © 2021 SeeSharper Contributors</Copyright>
+    <NeutralLanguage>en-US</NeutralLanguage>
+    <PackageId>Mimp.SeeSharper.Instantiation</PackageId>
+    <Version>1.0.0</Version>
+    <PackageTags>seesharper;.net;instantiate</PackageTags>
+    <PackageProjectUrl>https://github.com/DavenaHack/SeeSharper.Instantiation</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/DavenaHack/SeeSharper.Instantiation</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Label="nullable">
@@ -11,12 +27,16 @@
     <WarningsAsErrors>nullable</WarningsAsErrors>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(Configuration)' == 'Release'">
     <PackageReference Include="Mimp.SeeSharper.Reflection" Version="[1.0.0,]" />
+  </ItemGroup>
+  
+  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+    <ProjectReference Include="..\..\libs\Reflection\src\Mimp.SeeSharper.Reflection\Mimp.SeeSharper.Reflection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mimp.SeeSharper.Instantiation.Abstraction\Mimp.SeeSharper.Instantiation.Abstraction.csproj" />
+    <ProjectReference Include="..\Mimp.SeeSharper.Instantiation\Mimp.SeeSharper.Instantiation.Abstraction.csproj" />
   </ItemGroup>
 
 </Project>
