--- a/src/Mimp.SeeSharper.Instantiation/Mimp.SeeSharper.Instantiation.csproj
+++ b/src/Mimp.SeeSharper.Instantiation/Mimp.SeeSharper.Instantiation.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\Mimp.SeeSharper.Instantiation.Abstraction\Mimp.SeeSharper.Instantiation.Abstraction.csproj" />
   </ItemGroup>
 
+  <Target Name="BuildDependencies" Condition="'$(Configuration)' == 'Debug'" BeforeTargets="BuildLink">
+    <Exec Command="dotnet build '..\..\libs\Reflection\src\Mimp.SeeSharper.Reflection\Mimp.SeeSharper.Reflection.csproj' -c $(Configuration)" />
+  </Target>
+  
 </Project>
