--- a/src/Mimp.SeeSharper.Instantiation.Abstraction/Mimp.SeeSharper.Instantiation.Abstraction.csproj
+++ b/src/Mimp.SeeSharper.Instantiation.Abstraction/Mimp.SeeSharper.Instantiation.Abstraction.csproj
@@ -27,4 +27,16 @@
     <WarningsAsErrors>nullable</WarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(Configuration)' == 'Release'">
+    <PackageReference Include="Mimp.SeeSharper.ObjectDescription.Abstraction" Version="[1.0.0,]" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+    <ProjectReference Include="..\..\libs\ObjectDescription\src\Mimp.SeeSharper.ObjectDescription.Abstraction\Mimp.SeeSharper.ObjectDescription.Abstraction.csproj" />
+  </ItemGroup>
+
+  <Target Name="ResolveDependencies" BeforeTargets="BeforeResolveReferences" Condition="'$(Configuration)' == 'Debug'">
+    <MSBuild Projects="..\..\libs\ObjectDescription\src\Mimp.SeeSharper.ObjectDescription.Abstraction\Mimp.SeeSharper.ObjectDescription.Abstraction.csproj" Targets="Restore;Build" Properties="Configuration=Debug" />
+  </Target>
+
 </Project>
